Refactor expert application management and update UI components
- Removed expert approval routes from permission protected routes.
- Updated `ApplicationsTable` to use `next/link` for navigation.
- Enhanced `ExpertApplicationsPage` to improve status filtering logic.
- Added functionality to mark applications as under review in `ApplicationDetail`.
- Integrated tooltips in `ExpertPricingSection` for better user guidance.
- Updated various sections to change registration links to a unified `/apply` route.
- Deleted the `PricingPreviewSection` component as part of the restructuring for partner pricing.

--- a/src/content/become-expert/en.mdx
+++ b/src/content/become-expert/en.mdx
@@ -25,7 +25,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   description="Join Eleva Care as an independent, licensed healthcare professional. You maintain full clinical autonomy while we provide the secure platform technology—scheduling, video consultations, payments, and client management."
   ctaButton="Get Started"
   signInButton="Sign In"
-  features="✓ You remain fully independent  ✓ Keep 80% of earnings  ✓ Secure, GDPR-compliant platform"
+  features="✓ You remain fully independent  ✓ Keep 80–92% of earnings  ✓ Secure, GDPR-compliant platform"
 />
 
 <BenefitsSection
@@ -108,7 +108,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     plans: [
       {
         name: 'Pay-as-you-go',
-        price: '$0',
+        price: '€0',
         priceDetail: '/month',
         commission: '20%',
         description: 'Start earning immediately with no upfront costs',
@@ -123,12 +123,12 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Get Started Free',
-          href: '/register?expert=true&plan=community-paygo',
+          href: '/apply',
         },
       },
       {
         name: 'Monthly Plan',
-        price: '$49',
+        price: '€49',
         priceDetail: '/month',
         commission: '12%',
         badge: 'Lower Commission',
@@ -143,27 +143,27 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Choose Monthly',
-          href: '/register?expert=true&plan=community-monthly',
+          href: '/apply',
         },
       },
       {
         name: 'Annual Plan',
-        price: '$470',
+        price: '€490',
         priceDetail: '/year',
         commission: '12%',
         badge: 'Best Value',
-        savingsText: '💰 Save $118 (2 months free!)',
+        savingsText: '💰 Save €98 — 2 months free!',
         description: 'Maximum savings with annual commitment',
         features: [
           'Everything in Monthly',
           'Reduced 12% commission (save 8%)',
-          'Save $118 vs monthly billing',
+          'Save €98 vs monthly billing',
           'Annual commitment discount',
           'Priority support',
         ],
         cta: {
           text: 'Save with Annual',
-          href: '/register?expert=true&plan=community-annual',
+          href: '/apply',
         },
       },
     ],
@@ -185,7 +185,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     plans: [
       {
         name: 'Pay-as-you-go',
-        price: '$0',
+        price: '€0',
         priceDetail: '/month',
         commission: '15%',
         description: 'Premium features with commission-only pricing',
@@ -200,12 +200,12 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Apply for Top Expert',
-          href: '/register?expert=true&plan=top-paygo',
+          href: '/apply',
         },
       },
       {
         name: 'Monthly Plan',
-        price: '$177',
+        price: '€155',
         priceDetail: '/month',
         commission: '8%',
         badge: 'Industry-Leading',
@@ -221,28 +221,28 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Choose Monthly',
-          href: '/register?expert=true&plan=top-monthly',
+          href: '/apply',
         },
       },
       {
         name: 'Annual Plan',
-        price: '$1,696',
+        price: '€1,490',
         priceDetail: '/year',
         commission: '8%',
         badge: 'Maximum Value',
-        savingsText: '💰 Save $428 (2 months free!)',
+        savingsText: '💰 Save €370 — 2 months free!',
         description: 'Best value for the committed top performers',
         features: [
           'Everything in Monthly',
           'Industry-leading 8% commission',
-          'Save $428 vs monthly billing',
+          'Save €370 vs monthly billing',
           'Annual VIP perks',
           'Premium analytics',
           'Dedicated account manager',
         ],
         cta: {
           text: 'Save with Annual',
-          href: '/register?expert=true&plan=top-annual',
+          href: '/apply',
         },
       },
     ],
