--- a/src/content/become-expert/es.mdx
+++ b/src/content/become-expert/es.mdx
@@ -23,7 +23,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   description="Únete a Eleva Care como profesional de la salud independiente y licenciado. Mantienes tu autonomía clínica completa mientras nosotros proporcionamos la plataforma tecnológica segura—agenda, videoconsultas, pagos y gestión de clientes."
   ctaButton="Comenzar"
   signInButton="Iniciar Sesión"
-  features="✓ Independencia total  ✓ Conserva el 80% de ganancias  ✓ Plataforma segura y conforme con RGPD"
+  features="✓ Independencia total  ✓ Conserva el 80–92% de ganancias  ✓ Plataforma segura y conforme con RGPD"
 />
 
 <BenefitsSection
@@ -97,7 +97,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     plans: [
       {
         name: 'Pago por uso',
-        price: '$0',
+        price: '€0',
         priceDetail: '/mes',
         commission: '20%',
         description: 'Comienza a ganar inmediatamente sin costos iniciales',
@@ -112,12 +112,12 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Comenzar Gratis',
-          href: '/register?expert=true&plan=community-paygo',
+          href: '/apply',
         },
       },
       {
         name: 'Plan Mensual',
-        price: '$49',
+        price: '€49',
         priceDetail: '/mes',
         commission: '12%',
         badge: 'Comisión Reducida',
@@ -132,27 +132,27 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Elegir Mensual',
-          href: '/register?expert=true&plan=community-monthly',
+          href: '/apply',
         },
       },
       {
         name: 'Plan Anual',
-        price: '$470',
+        price: '€490',
         priceDetail: '/año',
         commission: '12%',
         badge: 'Mejor Valor',
-        savingsText: '💰 Ahorra $118 (¡2 meses gratis!)',
+        savingsText: '💰 Ahorra €98 — ¡2 meses gratis!',
         description: 'Máximo ahorro con compromiso anual',
         features: [
           'Todo en Plan Mensual',
           'Comisión reducida del 12% (ahorra 8%)',
-          'Ahorra $118 vs facturación mensual',
+          'Ahorra €98 vs facturación mensual',
           'Descuento por compromiso anual',
           'Soporte prioritario',
         ],
         cta: {
           text: 'Ahorrar con Anual',
-          href: '/register?expert=true&plan=community-annual',
+          href: '/apply',
         },
       },
     ],
@@ -174,7 +174,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     plans: [
       {
         name: 'Pago por uso',
-        price: '$0',
+        price: '€0',
         priceDetail: '/mes',
         commission: '15%',
         description: 'Funciones premium con precios solo por comisión',
@@ -189,12 +189,12 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Solicitar Experto Top',
-          href: '/register?expert=true&plan=top-paygo',
+          href: '/apply',
         },
       },
       {
         name: 'Plan Mensual',
-        price: '$177',
+        price: '€155',
         priceDetail: '/mes',
         commission: '8%',
         badge: 'Líder de la Industria',
@@ -210,28 +210,28 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Elegir Mensual',
-          href: '/register?expert=true&plan=top-monthly',
+          href: '/apply',
         },
       },
       {
         name: 'Plan Anual',
-        price: '$1,696',
+        price: '€1,490',
         priceDetail: '/año',
         commission: '8%',
         badge: 'Valor Máximo',
-        savingsText: '💰 Ahorra $428 (¡2 meses gratis!)',
+        savingsText: '💰 Ahorra €370 — ¡2 meses gratis!',
         description: 'Mejor valor para los mejores comprometidos',
         features: [
           'Todo en Plan Mensual',
           'Comisión líder del 8%',
-          'Ahorra $428 vs facturación mensual',
+          'Ahorra €370 vs facturación mensual',
           'Beneficios VIP anuales',
           'Analíticas premium',
           'Gerente de cuenta dedicado',
         ],
         cta: {
           text: 'Ahorrar con Anual',
-          href: '/register?expert=true&plan=top-annual',
+          href: '/apply',
         },
       },
     ],
