--- a/src/content/become-expert/pt-BR.mdx
+++ b/src/content/become-expert/pt-BR.mdx
@@ -23,7 +23,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   description="Junte-se à Eleva Care como profissional de saúde independente e licenciado. Você mantém total autonomia clínica enquanto nós fornecemos a plataforma tecnológica segura—agenda, videoconsultas, pagamentos e gestão de clientes."
   ctaButton="Começar"
   signInButton="Entrar"
-  features="✓ Total independência  ✓ Mantenha 80% dos ganhos  ✓ Plataforma segura e em conformidade com LGPD"
+  features="✓ Total independência  ✓ Mantenha 80–92% dos ganhos  ✓ Plataforma segura e em conformidade com LGPD"
 />
 
 <BenefitsSection
@@ -97,7 +97,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     plans: [
       {
         name: 'Pagamento por uso',
-        price: '$0',
+        price: '€0',
         priceDetail: '/mês',
         commission: '20%',
         description: 'Comece a ganhar imediatamente sem custos iniciais',
@@ -112,12 +112,12 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Começar Grátis',
-          href: '/register?expert=true&plan=community-paygo',
+          href: '/apply',
         },
       },
       {
         name: 'Plano Mensal',
-        price: '$49',
+        price: '€49',
         priceDetail: '/mês',
         commission: '12%',
         badge: 'Comissão Reduzida',
@@ -132,27 +132,27 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Escolher Mensal',
-          href: '/register?expert=true&plan=community-monthly',
+          href: '/apply',
         },
       },
       {
         name: 'Plano Anual',
-        price: '$470',
+        price: '€490',
         priceDetail: '/ano',
         commission: '12%',
         badge: 'Melhor Valor',
-        savingsText: '💰 Economize $118 (2 meses grátis!)',
+        savingsText: '💰 Economize €98 — 2 meses grátis!',
         description: 'Máxima economia com compromisso anual',
         features: [
           'Tudo em Plano Mensal',
           'Comissão reduzida de 12% (economize 8%)',
-          'Economize $118 vs faturamento mensal',
+          'Economize €98 vs faturamento mensal',
           'Desconto por compromisso anual',
           'Suporte prioritário',
         ],
         cta: {
           text: 'Economizar com Anual',
-          href: '/register?expert=true&plan=community-annual',
+          href: '/apply',
         },
       },
     ],
@@ -174,7 +174,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     plans: [
       {
         name: 'Pagamento por uso',
-        price: '$0',
+        price: '€0',
         priceDetail: '/mês',
         commission: '15%',
         description: 'Recursos premium com preços apenas por comissão',
@@ -189,12 +189,12 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Candidatar-se a Top',
-          href: '/register?expert=true&plan=top-paygo',
+          href: '/apply',
         },
       },
       {
         name: 'Plano Mensal',
-        price: '$177',
+        price: '€155',
         priceDetail: '/mês',
         commission: '8%',
         badge: 'Líder da Indústria',
@@ -210,28 +210,28 @@ import { Sparkles, TrendingUp } from 'lucide-react';
         ],
         cta: {
           text: 'Escolher Mensal',
-          href: '/register?expert=true&plan=top-monthly',
+          href: '/apply',
         },
       },
       {
         name: 'Plano Anual',
-        price: '$1,696',
+        price: '€1,490',
         priceDetail: '/ano',
         commission: '8%',
         badge: 'Valor Máximo',
-        savingsText: '💰 Economize $428 (2 meses grátis!)',
+        savingsText: '💰 Economize €370 — 2 meses grátis!',
         description: 'Melhor valor para os melhores comprometidos',
         features: [
           'Tudo em Plano Mensal',
           'Comissão líder de 8%',
-          'Economize $428 vs faturamento mensal',
+          'Economize €370 vs faturamento mensal',
           'Benefícios VIP anuais',
           'Analíticas premium',
           'Gerente de conta dedicado',
         ],
         cta: {
           text: 'Economizar com Anual',
-          href: '/register?expert=true&plan=top-annual',
+          href: '/apply',
         },
       },
     ],
